@startuml

' =======================
' ENUMS
' =======================

enum CourierStatus {
    AVAILABLE
    BUSY
    OFFLINE
}

enum OrderStatus {
    PENDING
    CONFIRMED
    PREPARING
    READY
    OUT_FOR_DELIVERY
    DELIVERED
    CANCELLED
}

enum OrderItemStatus {
    PENDING
    PREPARING
    READY
    CANCELLED
}

enum PaymentMethod {
    CASH
    CARD
    MBWAY
    PAYPAL
}

enum PaymentStatus {
    PENDING
    COMPLETED
    FAILED
}

enum DeliveryStatus {
    PENDING
    PICKED_UP
    IN_TRANSIT
    DELIVERED
    FAILED
}

enum NotificationType {
    PAYMENT_UPDATE
    DELIVERY_UPDATE
    ORDER_UPDATE
    PROMOTION
    SYSTEM
}

enum DiscountType {
    PERCENTAGE
    FIXED_AMOUNT
}

enum DiscountTarget {
    ORDER
    PRODUCT
    DELIVERY
    CATEGORY
}

enum OrderEventType {
    ORDER_CREATED
    ORDER_CONFIRMED
    ORDER_PREPARING
    ORDER_READY
    ORDER_OUT_FOR_DELIVERY
    ORDER_COMPLETED
    ORDER_CANCELLED
}

enum DeliveryEventType {
    DELIVERY_ACCEPTED
    DELIVERY_PICKED_UP
    DELIVERY_IN_TRANSIT
    DELIVERY_DELIVERED
    DELIVERY_FAILED
}


enum PaymentEventType {
    PAYMENT_CREATED
    PAYMENT_COMPLETED
    PAYMENT_FAILED
    PAYMENT_EXPIRED
}

enum ReviewTargetType {
    RESTAURANT
    COURIER
}

enum CampaignMorphType {
    PROMOTION
    COUPON
}

enum ChatType {
    CUSTOMER_RESTAURANT
    CUSTOMER_COURIER
}

enum UserType {
    CUSTOMER
    COURIER
    CHAIN_MANAGER
    LOCAL_MANAGER
}

' =======================
' USERS
' =======================

class User {
    +id: UUID
    +name: string
    +email: string
    +password: string
    +createdAt: datetime
}

class Customer {
}

class RestaurantChain {
    +id: UUID
    +name: string
}

class Restaurant {
    +id: UUID
    +name: string
    +openingHours: string
    +closingHours: string
    +deliveryRadius: float
    +ratingSum: float
    +ratingCount: int
}

class ChainManager {
    +chainId: UUID
}

class LocalManager {
    +restaurantId: UUID
}

class Courier {
    +status: CourierStatus
    +currentLocation: Point
    +lastLocationUpdate: datetime
    +ratingSum: float
    +ratingCount: int
}

User <|-- Customer
User <|-- Courier
User <|-- ChainManager
User <|-- LocalManager
ChainManager "*" -- "1" RestaurantChain
LocalManager "*" -- "1" Restaurant

User "1"-- "*" Address
' =======================
' MENU
' =======================

class Category {
    +id: UUID
    +name: string
}

class Product {
    +id: UUID
    +name: string
    +price: float
    +description: string
}

class ProductOptionGroup {
    +id: UUID
    +name: string
    +maxOptions: int
    +minOptions: int
}

class ProductOption {
    +id: UUID
    +name: string
    +extraPrice: float
    +defaultOption : boolean
}

Product "1" -- "*" ProductOptionGroup
ProductOptionGroup "1" -- "*" ProductOption

Restaurant "1"-- "1" Address
Category "1" -- "*" Product

class RestaurantProduct {
    +id: UUID
    +localPrice: float
    +isAvailable: boolean
    +estimatedPreparationTimeMin: int
}

' Relacionamentos da Cadeia
RestaurantChain "1" -- "*" Restaurant
RestaurantChain "1" -- "*" Category
RestaurantChain "1" -- "*" Promotion
RestaurantChain "1" -- "*" Coupon

' Lógica de Preços Locais (Ponte)
Restaurant "1" -- "*" RestaurantProduct
Product "1" -- "*" RestaurantProduct

' =======================
' CART
' =======================

class Cart {
    +id: UUID
    +total: float
    +createdAt: datetime
}

class CartItem {
    +quantity: int
    +unitPrice: float
    +totalPrice: float
}

class CartItemOption {
    +extraPrice: float
}

Customer "1" -- "1" Cart
Restaurant "1" -- "*" Cart
Cart "1" -- "*" CartItem
CartItem "*" -- "1" RestaurantProduct
CartItem "1" -- "*" CartItemOption
CartItemOption "1" -- "1" ProductOption

' =======================
' ORDER
' =======================

class Order {
    +id: UUID
    +status: OrderStatus
    +total: float
    +createdAt: datetime
    +restaurantNameSnapshot: string
}

class OrderDiscount {
    +orderId: UUID
    +nameSnapshot: string
    +descriptionSnapshot: string
    +discountAmount: float
    +discountType: DiscountType
    +discountTarget: DiscountTarget
    +orderItemId: UUID?
    +originType: CampaignMorphType
    +originId: UUID
}

class OrderItem {
    +status: OrderItemStatus
    +quantity: int
    +unitPrice: float
    +productNameSnapshot: string
    +totalPrice: float
}

class OrderItemOption {
    +optionNameSnapshot: string
    +extraPrice: float
}

class OrderEvent {
    +id: UUID
    +type: OrderEventType
    +timestamp: datetime
    +payload: JSON
}

Customer "1" -- "*" Order
Restaurant "1" -- "*" Order
Order "1" -- "*" OrderItem
Order "1" -- "*" OrderEvent
OrderItem "*" -- "1" RestaurantProduct
OrderItem "1" -- "*" OrderItemOption
OrderItemOption "*" -- "1" ProductOption
Order "1" -- "1" Address
Coupon "1" -- "*" OrderDiscount
Promotion "1" -- "*" OrderDiscount
OrderDiscount "*" -- "1" OrderItem
OrderDiscount "*" -- "1" Order


' =======================
' PAYMENT
' =======================

class Payment {
    +id: UUID
    +method: PaymentMethod
    +status: PaymentStatus
    +transactionId: string
    +paidAt: datetime
    +expiredAt: datetime
    +amount: float
}

class PaymentEvent {
    +id: UUID
    +paymentId: UUID
    +type: PaymentEventType
    +payload: JSON
    +createdAt: datetime
}

Order "1" -- "1" Payment
Payment "1" -- "*" PaymentEvent
' =======================
' DELIVERY
' =======================

class Delivery {
    +status: DeliveryStatus
    +pickupTime: datetime
    +deliveryTime: datetime
    +delivery_fee: float
}

class CourierPositionHistory {
    +id: UUID
    +location: Point
    +timestamp: datetime
}

class DeliveryEvent {
    +id: UUID
    +deliveryId: UUID
    +type: DeliveryEventType
    +payload: JSON
    +createdAt: datetime
}

Courier "1" -- "*" Delivery
Order "1" -- "1" Delivery
Delivery "1" -- "*" CourierPositionHistory

' =======================
' NOTIFICATIONS & CHAT
' =======================

class Notification {
    +id: UUID
    +type: NotificationType
    +message: string
    +sentAt : datetime
    +readAt: datetime
}

User "1" -- "*" Notification

class Chat{
    - id: UUID
    - orderId: UUID
    - type: ChatType
    - createdAt: datetime
    - closedAt: datetime?
}

class chatParticipant {
    - id: UUID
    - chatId: UUID
    - userId: UUID?
    - userType: UserType
    - joinedAt: datetime
    - lastReadAt: datetime?
}

class Message{
    - id: UUID
    - chatId: UUID
    - senderParticipantId: UUID
    - content: string
    - timestamp: datetime
    - readAt: datetime?
}

User "1" -- "*" chatParticipant
Chat "1" -- "*" chatParticipant
Chat "1" -- "*" Message
Chat "*" -- "1" Order
' =======================
' PROMOTIONS
' =======================

class Coupon {
    +id: UUID
    +code: string
    +description: string
    +type: DiscountType
    +target: DiscountTarget
    +discount: float
    +expiryDate: datetime
}

class Promotion {
    +id: UUID
    +name: string
    +description: string
    +type: DiscountType
    +target: DiscountTarget
    +discount: float
    +startDate: datetime
    +endDate: datetime
}

class PromotionItem {
    +id: UUID
    +parentType: CampaignMorphType
    +parentId: UUID
    +itemId: UUID
}

Promotion "1" -- "*" PromotionItem
Coupon "1" -- "*" PromotionItem
PromotionItem ..> Product : itemId when target PRODUCT
PromotionItem ..> Category : itemId when target CATEGORY


' =======================
' Reviews
' =======================

class Review {
    +id: UUID
    +rating: int
    +comment: string
    +createdAt: datetime
    +targetType: ReviewTargetType
    +targetId: UUID
}



Customer "1" -- "*" Review
Restaurant "1" -- "*" Review
Courier "1" -- "*" Review

' =======================
' Address
' =======================

abstract class Address {
    +id: UUID
    +street: string
    +city: string
    +postalCode: string
    +country: string
    +location:Point
}

class CustomerAddress extends Address {
    +customerId: UUID
    +isDefault: bool
    +label:string
}

class OrderAddress extends Address {
    +orderId: UUID
}

class RestaurantAddress extends Address {
    +restaurantId: UUID
}

Order "1" -- "1" OrderAddress
Customer "1" -- "*" CustomerAddress
Restaurant "1" -- "*" RestaurantAddress

@enduml
